fix seeting page